Modified CSS, fixed footer on mobile. Added the 'Secret'. Some layout fixes

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -26,10 +26,16 @@ nav {
   top: 0px;
   font-family: $Oxygen !important;
   background-color: $Tangerine !important;
-  color: $Tan !important;
+  color: $Teal !important;
+
   a {
     color: $Tan !important;
+    &:hover{
+      background-color: $Tan !important;
+      color: $Tangerine !important;
+    }
   }
+
   div {
 
 
@@ -39,6 +45,9 @@ nav {
 }
 
 footer {
+  position: absolute !important;
+  width: 100% !important;
+  bottom: 0px !important;
   background-color: $Tangerine !important;
   font-family: $Oxygen !important;
 }
@@ -55,13 +64,17 @@ This is the CSS code for the restaurant listing page.
  */
 
 .restaurant-listing {
+  height: 100% !important;
+  //padding-bottom: 17% !important;
   table {
     thead {
       tr {
 
         th {
-                  padding-left: 1rem !important;
-        padding-right: 1rem !important;
+          padding-top: 0.5rem !important;
+          padding-left: 0.5rem !important;
+          padding-right: 0.5rem !important;
+          align-content: center !important;
         }
 
       }
@@ -72,13 +85,19 @@ This is the CSS code for the restaurant listing page.
       tr {
 
         th {
-                  padding-left: 1rem !important;
-        padding-right: 1rem !important;
+          padding-top: 0.5rem !important;
+          padding-left: 0.5rem !important;
+          padding-right: 0.5rem !important;
+          padding-bottom: 0.5rem !important;
         }
 
         td {
-                  padding-left: 1rem !important;
-        padding-right: 1rem !important;
+          padding-top: 0.5rem !important;
+          padding-left: 2rem !important;
+          padding-right: 2rem !important;
+          padding-bottom: 0.5rem !important;
+
+
         }
       }
     }
@@ -97,7 +116,6 @@ This is the CSS code for the restaurant page.
  */
 
 
-
 /*
 
 -----  4. Info  -----
@@ -105,3 +123,24 @@ This is the CSS code for the restaurant page.
 This is the CSS code for the info.
 
  */
+
+
+/*
+
+-----  5. Mobile optimization  -----
+
+This is the CSS code for the mobiles.
+
+ */
+
+@media screen and (max-width: 992px) {
+  body {
+    nav {
+
+    }
+
+    footer {
+      position: relative !important;
+    }
+  }
+}
